Resolves #1457 UI: "Show All" brand link content (ellipsis) is not centered in manufacturer carousel

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_artlist.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_artlist.scss
@@ -796,6 +796,7 @@
         justify-content: center;
         flex-grow: 1;
         text-align: center;
+        align-items: center;
         padding: 1rem;
         text-decoration: none !important;
         font-size: 1.25rem;
